# ECE4760.github.io

./: CNAME  Final_Project.html  index.html
.ipynb_checkpoints/: Final_Project-checkpoint.ipynb
Projects/: Projects.html  Projects.ipynb
Projects/.ipynb_checkpoints/: Projects-checkpoint.ipynb
Projects/Fall2022/afp65_mib57_ens57/: index.html
Projects/Fall2022/ah677_jjn48_tlc234/: README.md  index.html
Projects/Fall2022/amf349_ahk86_agh93/: index.html  report.md
Projects/Fall2022/bat66_cys37_rjw252/: index.html  style.css
Projects/Fall2022/bm586_snh44/: about.html  appendix.html  background.html  design.html  features.html  index.html  results.html
Projects/Fall2022/cwf54_nr346_keb282/: index.html
Projects/Fall2022/das538_eqy2_yd395/: README.md  index.html
Projects/Fall2022/eds228_bb584/: examplemodule.c  index.html  page.html
Projects/Fall2022/emg229_cc2698_jcp327/: FinalReport.html
Projects/Fall2022/hh543_yz483_mkm249/: Final.html
Projects/Fall2022/iaa34_swy6_nrb74/: README.txt  index.html  index.md
Projects/Fall2022/jfd232_oe36_psp43/: README.md  index.html
Projects/Fall2022/jro79_aoa34/: LICENSE  README.md  index.html
Projects/Fall2022/jwl266_cds258_rat83/: README.md  index.html  params.json
Projects/Fall2022/ljk74_jwf224/: index.html  style.css
Projects/Fall2022/lsg84/: README.md  index.md  start.html
Projects/Fall2022/mk2592_yw575_asx3/: index.html
Projects/Fall2022/mmc323-jah569-rm857/: README.md  index.html  index.md
Projects/Fall2022/ocl6_lms445/: 404.html  appendices.html  design.html  feed.xml  index.html  projectdemo.html
Projects/Fall2022/rsb359_ljg227_sk2446/: index.html
Projects/Fall2022/sko35_ns594_kg543/: README.md  _config.yml  index.html
Projects/Fall2022/sl2625_txp2_pr376/: app.css  index.html
Projects/Fall2022/spd75_cea57/: appendix.html  conclusion.html  feed.xml  hdesign.html  hldesign.html  index.html  pdesign.html  results.html  sitemap.xml
Projects/Fall2022/tc575_rm722_raf269/: README.md  blank.html  code.html  conclusions.html  design.html  index.html  misc.html  overview.html  permissions.html  results.html
Projects/Fall2022/tg382_kaf245/: index.html  index.md
Projects/Fall2022/tl482_yy389_zy278/: index.html
Projects/Fall2022/tms279_zdh5_adf64/: 404.html  feed.xml  index.html
Projects/Fall2022/tts47_ems395_mck65/: 404.html  appendix.html  conclusion.html  feed.xml  hardware.html  hld.html  index.html  program.html  results.html  robots.txt  sitemap.xml  visual.html
Projects/Fall2022/vk262_mse63/: app.css  app.js  index.html
Projects/Fall2022/ww474_yy796_yw2359/: web.html
Projects/Fall2022/yj253_lh494_cz236/: 404.html  about.html  archives.html  categories.html  feed.xml  gallery.html  index.html  project-code.html  project-details.html  robots.txt  sitemap.xml  tags.html
Projects/Fall2022/yp284_yl2237/: Final Report.md  index.html
Projects/Fall2022/yw2464_yc2443/: ECE5730_Final_Website.html  starter-template.css
Projects/Fall2022/zh338_zp74/: final report.ipynb  index.html
Projects/Fall2022/zl348_ch682/: appendix.html  conclusions.html  hardware.html  high-level.html  index.html  results.html  software.html  zl348_ch682_webpage_link.txt
Projects/Fall2022/zmc6_kmm477_hwm44/: Appendix.css  Appendix.html  High-Level-Design.css  High-Level-Design.html  Home.css  Home.html  PH-Design.css  PH-Design.html  Results-and-Conclusion.css  Results-and-Conclusion.html  index.html  nicepage.css  nicepage.js
Projects/Fall2022/zw543_yz2979_hft9/: Main.css  Main.html  nicepage.css
Projects/Fall2022/zw652_zl599_xl767/: index.html
Projects/Fall2023/app67_dtt34/: final.html
Projects/Fall2023/av458_dht35_gwl45/: hardware_design.html  index.html  program_design.html  results_conclusion.html  visual_design.html
Projects/Fall2023/av522_dy245/: code.html  index.html  pio.html  python.html
Projects/Fall2023/bg372_jtg239/: FinalProjectWebpage.html
Projects/Fall2023/cdc227_ms2663_vs356/: Appendix A Permissions.html  Appendix B Code.html  Appendix C Tasks Breakdown.html  Appendix D References.html  Conclusions.html  Controller Design.html  High-Level Design.html  Program Design.html  Project Introduction.html  Results.html  VGA Circuit Design.html
Projects/Fall2023/cmm478_ses398/: ECE4760FinalReport.html
Projects/Fall2023/cy524_sk2794/: cy524_sk2794.html
Projects/Fall2023/gyc22_sl2383/Mega_Ohm/: CMakeLists.txt  LED.c  LED.h  SPIPIO.pio  TFTMaster.h  cycle_delay.S  resistor.c  sound_converter.py  sounds_arrays.h
Projects/Fall2023/ir93_rak277/final_lab/: CMakeLists.txt  mandelbrot_multipico.c  rgb.pio
Projects/Fall2023/ir93_rak277/final_lab_mandelbrot_central/: CMakeLists.txt  mandelbrot_multipico_match.c
Projects/Fall2023/ml2226_cca54/code/: BLUE.h  CMakeLists.txt  GREEN.h  README.md  RED.h  YELLOW.h  button.c  button.h  led.c  led.h  pico_sdk_import.cmake  picow_udp_send_recv_data.c  pt_cornell_rp2040_v1_1_2.h  udpecho_raw.h  x.txt
Projects/Fall2025/dcp243_jk2878/ece4760-final-project-main-writeup/src/demo/: CMakeLists.txt  galton.c  simple_agent_spi.c  spi_test_master.c  spi_test_slave.c
Projects/Fall2025/dcp243_jk2878/ece4760-final-project-main-writeup/src/driver/vga/: CMakeLists.txt  font_rom_brl4.h  glcdfont.c  hsync.pio  rgb.pio  vga16_graphics_v2.c  vga16_graphics_v2.h  vsync.pio
Projects/Fall2025/iab35_lg634/code/: CMakeLists.txt  README.md  global.c  global.h  log.md  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Projects/Fall2025/iab35_lg634/code/.helix/: languages.toml
Projects/Fall2025/iab35_lg634/code/drivers/: driver.h
Projects/Fall2025/iab35_lg634/code/drivers/button/: button.c  button.h
Projects/Fall2025/iab35_lg634/code/drivers/encoder/: encoder.c  encoder.h
Projects/Fall2025/iab35_lg634/code/drivers/joystick/: joystick.c  joystick.h
Projects/Fall2025/iab35_lg634/code/drivers/pmw3389/: firmware.h  pmw3389.c  pmw3389.h
Projects/Fall2025/iab35_lg634/code/equeue/: README.md  equeue_pico.c  equeue_platform.h
Projects/Fall2025/iab35_lg634/code/events/: config.c  config_func.c  ebind.c  ebind.h  elib.c  elib.h  hw.c  hw.h  types.h
(+606 files in other folders)
